--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
- <label for="question">Question You Want To Ask</label>
+<script src="main.js"></script> 
+<label for="question">Question You Want To Ask</label>
   <input type="text" id="question">
 <p id="output"></p>
