--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <script src="main.js"></script> 
-<label for="question">Question You Want To Ask</label>
+ <label for="fname">Question</label>
   <input type="text" id="question">
+<input type = "button" onclick = "tarotcard()" value = "Draw Card">
+
 <p id="output"></p>
